# rbfImage

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD
include/: application.h  constants.h  image_handler.h  neural_network.h  neuron.h
main/: CMakeLists.txt  main.cpp
res/trainingImages/: outputs.txt
src/: Application.cpp  CMakeLists.txt  image_handler.cpp  neural_network.cpp  neuron.cpp
